--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
             <a href="https://lattifai.com" class="btn btn-primary" target="_blank" rel="noopener">
                 Get Started →
             </a>
-            <a href="https://github.com/lattifai/lattifai-python" class="btn btn-secondary" target="_blank" rel="noopener">
+            <a href="https://github.com/lattifai/benchmark" class="btn btn-secondary" target="_blank" rel="noopener">
                 View on GitHub
             </a>
         </div>
@@ -874,7 +874,7 @@
     <footer class="footer">
         <p>
             All benchmarks are reproducible. See
-            <a href="https://github.com/lattifai/lattifai-python/tree/main/benchmark" target="_blank" rel="noopener">benchmark/README.md</a>
+            <a href="https://github.com/lattifai/benchmark" target="_blank" rel="noopener">README.md</a>
             for commands.
         </p>
     </footer>
